@@ -1,5 +1,10 @@
 2008-10-06  Richard Hult  <richard@imendio.com>
 
+	* src/dh-assistant.c (assistant_set_link): Break the line after
+	the #define for macros, to make the output narrower.
+
+2008-10-06  Richard Hult  <richard@imendio.com>
+
 	* src/dh-link.[ch]: (dh_link_new): Don't care about id/base for
 	links other than books. Update copyright to reflect reality (the
 	orignal code has all been replaced).
